# grist-fill-form

./: README.md  config-example.yml  config.yml  dev.sh  pyproject.toml
.github/workflows/: ci.yml
fillform/: app.py
fillform/templates/: base.html  index.html
