[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grist-fillform"
version = "2024.1"
description = "Mini web app to collect form responses for Grist"

readme = "README.md"
repository = "https://github.com/inducer/grist-fill-form"
authors = [
    { name  = "Andreas Kloeckner", email="inform@tiker.net"}
]

requires-python = ">=3.10,<4"
dependencies = [
    "flask~=3.0.0",
    "jinja2~=3.1.2",
    "requests~=2.31",
    "pygrist-mini~=2023.2.1",
    "strictyaml~=1.7.3",
    "markdown~=3.6",
]

[dependency-groups]
dev = [
    "ruff~=0.11.2",
    "mypy~=1.9.0",
    "types-Markdown~=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fillform"]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "PGH", # pygrep-hooks
    "Q",   # flake8-quotes
    "RUF", # ruff
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",  # McCabe complexity
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = [
    "pytools",
]
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# vim: foldmethod=marker
