[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grist-fillform"
version = "2024.1"
description = "Mini web app to collect form responses for Grist"

readme = "README.md"
repository = "https://github.com/inducer/grist-fill-form"
authors = [
    { name  = "Andreas Kloeckner", email="inform@tiker.net"}
]

requires-python = ">=3.10,<4"
dependencies = [
    "flask~=3.0.0",
    "jinja2~=3.1.2",
    "requests~=2.31",
    "pygrist-mini~=2026.1",
    "markdown~=3.6",
    "granian~=2.7",
    "pydantic~=2.13",
    "pyyaml~=6.0",
]

[dependency-groups]
dev = [
    "ruff~=0.15",
    "basedpyright~=1.30",
    "types-Markdown~=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["fillform"]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "PGH", # pygrep-hooks
    "Q",   # flake8-quotes
    "RUF", # ruff
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",  # McCabe complexity
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = [
    "pytools",
]
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true


[tool.basedpyright]
reportAny = "hint"
reportExplicitAny = "hint"
reportUnknownMemberType = "hint"
reportUnknownVariableType = "hint"
reportUnknownArgumentType = "hint"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"

# vim: foldmethod=marker
